Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-92855

Dock widgets' title bars on macOS dark mode do not fit in

    XMLWordPrintable

Details

    • macOS
    • 09a0ba132 (dev), 0d91cc866 (dev), 3e563088c (6.7), 3a0ed76c5 (6.7)

    Description

      On macOS with dark mode, the title bars have a way too strong gradient (see attached screen capture created with the standard Dock Widgets example from Qt). Maybe it should have no gradient at all? It looks as if other title bars (see attached screen capture), tool bars, etc. don't have gradients in dark mode.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vhilshei Volker Hilsheimer
            racoon racoon
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews