src/plugins/styles/mac/qmacstyle_mac.mm
@@ -162,45 +162,6 @@ QVector<QPointer<QObject> > QMacStylePrivate::scrollBars;
 
 bool isDarkMode() { return QGuiApplicationPrivate::platformTheme()->colorScheme() == Qt::ColorScheme::Dark; }
 
-// Title bar gradient colors for Lion were determined by inspecting PSDs exported
-// using CoreUI's CoreThemeDocument; there is no public API to retrieve them
-
-static QLinearGradient titlebarGradientActive()
-{
-    static QLinearGradient darkGradient = [](){
-        QLinearGradient gradient;
-        // FIXME: colors are chosen somewhat arbitrarily and could be fine-tuned,
-        // or ideally determined by calling a native API.
-        gradient.setColorAt(0, QColor(47, 47, 47));
-        return gradient;
-    }();
-    static QLinearGradient lightGradient = [](){
-        QLinearGradient gradient;
-        gradient.setColorAt(0, QColor(235, 235, 235));
-        gradient.setColorAt(0.5, QColor(210, 210, 210));
-        gradient.setColorAt(0.75, QColor(195, 195, 195));
-        gradient.setColorAt(1, QColor(180, 180, 180));
-        return gradient;
-    }();
-    return isDarkMode() ? darkGradient : lightGradient;
-}
-
-static QLinearGradient titlebarGradientInactive()
-{
-    static QLinearGradient darkGradient = [](){
-        QLinearGradient gradient;
-        gradient.setColorAt(1, QColor(42, 42, 42));
-        return gradient;
-    }();
-    static QLinearGradient lightGradient = [](){
-        QLinearGradient gradient;
-        gradient.setColorAt(0, QColor(250, 250, 250));
-        gradient.setColorAt(1, QColor(225, 225, 225));
-        return gradient;
-    }();
-    return isDarkMode() ? darkGradient : lightGradient;
-}
-
 #if QT_CONFIG(tabwidget)
 /*
     Since macOS 10.14 AppKit is using transparency more extensively, especially for the
@@ -3411,17 +3372,7 @@ void QMacStyle::drawPrimitive(PrimitiveElement pe, const QStyleOption *opt, QPai
         } break;
 #endif // QT_CONFIG(tabbar)
     case PE_PanelStatusBar: {
-        // Fill the status bar with the titlebar gradient.
-        QLinearGradient linearGrad;
-        if (w ? qt_macWindowMainWindow(w->window()) : (opt->state & QStyle::State_Active)) {
-            linearGrad = titlebarGradientActive();
-        } else {
-            linearGrad = titlebarGradientInactive();
-        }
-
-        linearGrad.setStart(0, opt->rect.top());
-        linearGrad.setFinalStop(0, opt->rect.bottom());
-        p->fillRect(opt->rect, linearGrad);
+        p->fillRect(opt->rect, opt->palette.window());
 
         // Draw the black separator line at the top of the status bar.
         if (w ? qt_macWindowMainWindow(w->window()) : (opt->state & QStyle::State_Active))
@@ -4103,12 +4054,7 @@ void QMacStyle::drawControl(ControlElement ce, const QStyleOption *opt, QPainter
             }
 
             // fill title bar background
-            QLinearGradient linearGrad;
-            linearGrad.setStart(QPointF(0, 0));
-            linearGrad.setFinalStop(QPointF(0, 2 * effectiveRect.height()));
-            linearGrad.setColorAt(0, opt->palette.button().color());
-            linearGrad.setColorAt(1, opt->palette.dark().color());
-            p->fillRect(effectiveRect, linearGrad);
+            p->fillRect(effectiveRect, opt->palette.window());
 
             // draw horizontal line at bottom
             p->setPen(opt->palette.dark().color());
